--- a/result/2022-01-10.md
+++ b/result/2022-01-10.md
@@ -17,26 +17,27 @@
 17. [这猫普通话过二甲了吧](https://s.weibo.com//weibo?q=%E8%BF%99%E7%8C%AB%E6%99%AE%E9%80%9A%E8%AF%9D%E8%BF%87%E4%BA%8C%E7%94%B2%E4%BA%86%E5%90%A7&Refer=top) 319061
 18. [国考申论](https://s.weibo.com//weibo?q=%E5%9B%BD%E8%80%83%E7%94%B3%E8%AE%BA&Refer=top) 307896
 19. [刘鑫 江歌](https://s.weibo.com//weibo?q=%E5%88%98%E9%91%AB%20%E6%B1%9F%E6%AD%8C&Refer=top) 296563
-20. [外国人是这样逃网课的](https://s.weibo.com//weibo?q=%23%E5%A4%96%E5%9B%BD%E4%BA%BA%E6%98%AF%E8%BF%99%E6%A0%B7%E9%80%83%E7%BD%91%E8%AF%BE%E7%9A%84%23&Refer=top) 281816
+20. [外国人是这样逃网课的](https://s.weibo.com//weibo?q=%23%E5%A4%96%E5%9B%BD%E4%BA%BA%E6%98%AF%E8%BF%99%E6%A0%B7%E9%80%83%E7%BD%91%E8%AF%BE%E7%9A%84%23&Refer=top) 294510
 21. [天津战奥密克戎两大难点不容小觑](https://s.weibo.com//weibo?q=%23%E5%A4%A9%E6%B4%A5%E6%88%98%E5%A5%A5%E5%AF%86%E5%85%8B%E6%88%8E%E4%B8%A4%E5%A4%A7%E9%9A%BE%E7%82%B9%E4%B8%8D%E5%AE%B9%E5%B0%8F%E8%A7%91%23&Refer=top) 280502
 22. [天津市民群众非必要不离津](https://s.weibo.com//weibo?q=%E5%A4%A9%E6%B4%A5%E5%B8%82%E6%B0%91%E7%BE%A4%E4%BC%97%E9%9D%9E%E5%BF%85%E8%A6%81%E4%B8%8D%E7%A6%BB%E6%B4%A5&Refer=top) 258574
 23. [在天上看飞机是什么体验](https://s.weibo.com//weibo?q=%23%E5%9C%A8%E5%A4%A9%E4%B8%8A%E7%9C%8B%E9%A3%9E%E6%9C%BA%E6%98%AF%E4%BB%80%E4%B9%88%E4%BD%93%E9%AA%8C%23&Refer=top) 252302
 24. [深圳卫健委电话发我后续来了](https://s.weibo.com//weibo?q=%23%E6%B7%B1%E5%9C%B3%E5%8D%AB%E5%81%A5%E5%A7%94%E7%94%B5%E8%AF%9D%E5%8F%91%E6%88%91%E5%90%8E%E7%BB%AD%E6%9D%A5%E4%BA%86%23&Refer=top) 236711
 25. [易烊千玺年度新锐男演员](https://s.weibo.com//weibo?q=%23%E6%98%93%E7%83%8A%E5%8D%83%E7%8E%BA%E5%B9%B4%E5%BA%A6%E6%96%B0%E9%94%90%E7%94%B7%E6%BC%94%E5%91%98%23&Refer=top) 234673
 26. [广东凉茶有多讲究](https://s.weibo.com//weibo?q=%E5%B9%BF%E4%B8%9C%E5%87%89%E8%8C%B6%E6%9C%89%E5%A4%9A%E8%AE%B2%E7%A9%B6&Refer=top) 203771
-27. [电梯下坠自救方法](https://s.weibo.com//weibo?q=%23%E7%94%B5%E6%A2%AF%E4%B8%8B%E5%9D%A0%E8%87%AA%E6%95%91%E6%96%B9%E6%B3%95%23&Refer=top) 194334
+27. [电梯下坠自救方法](https://s.weibo.com//weibo?q=%23%E7%94%B5%E6%A2%AF%E4%B8%8B%E5%9D%A0%E8%87%AA%E6%95%91%E6%96%B9%E6%B3%95%23&Refer=top) 199815
 28. [猫咪冬天也会冷](https://s.weibo.com//weibo?q=%23%E7%8C%AB%E5%92%AA%E5%86%AC%E5%A4%A9%E4%B9%9F%E4%BC%9A%E5%86%B7%23&Refer=top) 189664
 29. [汉堡王和麦当劳是CP](https://s.weibo.com//weibo?q=%23%E6%B1%89%E5%A0%A1%E7%8E%8B%E5%92%8C%E9%BA%A6%E5%BD%93%E5%8A%B3%E6%98%AFCP%23&Refer=top) 187278
 30. [天津6地升为中风险](https://s.weibo.com//weibo?q=%23%E5%A4%A9%E6%B4%A56%E5%9C%B0%E5%8D%87%E4%B8%BA%E4%B8%AD%E9%A3%8E%E9%99%A9%23&Refer=top) 183299
-31. [吉林一市民抽烟偶遇豹子下树](https://s.weibo.com//weibo?q=%23%E5%90%89%E6%9E%97%E4%B8%80%E5%B8%82%E6%B0%91%E6%8A%BD%E7%83%9F%E5%81%B6%E9%81%87%E8%B1%B9%E5%AD%90%E4%B8%8B%E6%A0%91%23&Refer=top) 181914
-32. [女子回家路上发现父亲骑马护送](https://s.weibo.com//weibo?q=%23%E5%A5%B3%E5%AD%90%E5%9B%9E%E5%AE%B6%E8%B7%AF%E4%B8%8A%E5%8F%91%E7%8E%B0%E7%88%B6%E4%BA%B2%E9%AA%91%E9%A9%AC%E6%8A%A4%E9%80%81%23&Refer=top) 173327
-33. [深圳地铁一老外褪下口罩脚踩扶手](https://s.weibo.com//weibo?q=%23%E6%B7%B1%E5%9C%B3%E5%9C%B0%E9%93%81%E4%B8%80%E8%80%81%E5%A4%96%E8%A4%AA%E4%B8%8B%E5%8F%A3%E7%BD%A9%E8%84%9A%E8%B8%A9%E6%89%B6%E6%89%8B%23&Refer=top) 172062
-34. [阳性外国运动员赴北京三里屯游玩为谣言](https://s.weibo.com//weibo?q=%23%E9%98%B3%E6%80%A7%E5%A4%96%E5%9B%BD%E8%BF%90%E5%8A%A8%E5%91%98%E8%B5%B4%E5%8C%97%E4%BA%AC%E4%B8%89%E9%87%8C%E5%B1%AF%E6%B8%B8%E7%8E%A9%E4%B8%BA%E8%B0%A3%E8%A8%80%23&Refer=top) 169340
-35. [新疆出现冰晕奇观](https://s.weibo.com//weibo?q=%23%E6%96%B0%E7%96%86%E5%87%BA%E7%8E%B0%E5%86%B0%E6%99%95%E5%A5%87%E8%A7%82%23&Refer=top) 168236
-36. [中国航天人绝不带问题上天](https://s.weibo.com//weibo?q=%23%E4%B8%AD%E5%9B%BD%E8%88%AA%E5%A4%A9%E4%BA%BA%E7%BB%9D%E4%B8%8D%E5%B8%A6%E9%97%AE%E9%A2%98%E4%B8%8A%E5%A4%A9%23&Refer=top) 166539
-37. [柿饼万物皆可包](https://s.weibo.com//weibo?q=%E6%9F%BF%E9%A5%BC%E4%B8%87%E7%89%A9%E7%9A%86%E5%8F%AF%E5%8C%85&Refer=top) 166071
-38. [离开天津须48小时核酸阴性证明和绿码](https://s.weibo.com//weibo?q=%23%E7%A6%BB%E5%BC%80%E5%A4%A9%E6%B4%A5%E9%A1%BB48%E5%B0%8F%E6%97%B6%E6%A0%B8%E9%85%B8%E9%98%B4%E6%80%A7%E8%AF%81%E6%98%8E%E5%92%8C%E7%BB%BF%E7%A0%81%23&Refer=top) 158373
-39. [田联最新排名苏炳添世界第八](https://s.weibo.com//weibo?q=%23%E7%94%B0%E8%81%94%E6%9C%80%E6%96%B0%E6%8E%92%E5%90%8D%E8%8B%8F%E7%82%B3%E6%B7%BB%E4%B8%96%E7%95%8C%E7%AC%AC%E5%85%AB%23&Refer=top) 157230
+31. [田联最新排名苏炳添世界第八](https://s.weibo.com//weibo?q=%23%E7%94%B0%E8%81%94%E6%9C%80%E6%96%B0%E6%8E%92%E5%90%8D%E8%8B%8F%E7%82%B3%E6%B7%BB%E4%B8%96%E7%95%8C%E7%AC%AC%E5%85%AB%23&Refer=top) 182502
+32. [吉林一市民抽烟偶遇豹子下树](https://s.weibo.com//weibo?q=%23%E5%90%89%E6%9E%97%E4%B8%80%E5%B8%82%E6%B0%91%E6%8A%BD%E7%83%9F%E5%81%B6%E9%81%87%E8%B1%B9%E5%AD%90%E4%B8%8B%E6%A0%91%23&Refer=top) 181914
+33. [女子回家路上发现父亲骑马护送](https://s.weibo.com//weibo?q=%23%E5%A5%B3%E5%AD%90%E5%9B%9E%E5%AE%B6%E8%B7%AF%E4%B8%8A%E5%8F%91%E7%8E%B0%E7%88%B6%E4%BA%B2%E9%AA%91%E9%A9%AC%E6%8A%A4%E9%80%81%23&Refer=top) 173327
+34. [深圳地铁一老外褪下口罩脚踩扶手](https://s.weibo.com//weibo?q=%23%E6%B7%B1%E5%9C%B3%E5%9C%B0%E9%93%81%E4%B8%80%E8%80%81%E5%A4%96%E8%A4%AA%E4%B8%8B%E5%8F%A3%E7%BD%A9%E8%84%9A%E8%B8%A9%E6%89%B6%E6%89%8B%23&Refer=top) 172062
+35. [阳性外国运动员赴北京三里屯游玩为谣言](https://s.weibo.com//weibo?q=%23%E9%98%B3%E6%80%A7%E5%A4%96%E5%9B%BD%E8%BF%90%E5%8A%A8%E5%91%98%E8%B5%B4%E5%8C%97%E4%BA%AC%E4%B8%89%E9%87%8C%E5%B1%AF%E6%B8%B8%E7%8E%A9%E4%B8%BA%E8%B0%A3%E8%A8%80%23&Refer=top) 169340
+36. [新疆出现冰晕奇观](https://s.weibo.com//weibo?q=%23%E6%96%B0%E7%96%86%E5%87%BA%E7%8E%B0%E5%86%B0%E6%99%95%E5%A5%87%E8%A7%82%23&Refer=top) 168236
+37. [中国航天人绝不带问题上天](https://s.weibo.com//weibo?q=%23%E4%B8%AD%E5%9B%BD%E8%88%AA%E5%A4%A9%E4%BA%BA%E7%BB%9D%E4%B8%8D%E5%B8%A6%E9%97%AE%E9%A2%98%E4%B8%8A%E5%A4%A9%23&Refer=top) 166539
+38. [柿饼万物皆可包](https://s.weibo.com//weibo?q=%E6%9F%BF%E9%A5%BC%E4%B8%87%E7%89%A9%E7%9A%86%E5%8F%AF%E5%8C%85&Refer=top) 166071
+39. [离开天津须48小时核酸阴性证明和绿码](https://s.weibo.com//weibo?q=%23%E7%A6%BB%E5%BC%80%E5%A4%A9%E6%B4%A5%E9%A1%BB48%E5%B0%8F%E6%97%B6%E6%A0%B8%E9%85%B8%E9%98%B4%E6%80%A7%E8%AF%81%E6%98%8E%E5%92%8C%E7%BB%BF%E7%A0%81%23&Refer=top) 158373
 40. [这就是当代少年的样子](https://s.weibo.com//weibo?q=%23%E8%BF%99%E5%B0%B1%E6%98%AF%E5%BD%93%E4%BB%A3%E5%B0%91%E5%B9%B4%E7%9A%84%E6%A0%B7%E5%AD%90%23&Refer=top) 145750
 41. [TTG晋级总决赛](https://s.weibo.com//weibo?q=%23TTG%E6%99%8B%E7%BA%A7%E6%80%BB%E5%86%B3%E8%B5%9B%23&Refer=top) 131127
 42. [河南中小学放假时间集中在1月18日至25日](https://s.weibo.com//weibo?q=%23%E6%B2%B3%E5%8D%97%E4%B8%AD%E5%B0%8F%E5%AD%A6%E6%94%BE%E5%81%87%E6%97%B6%E9%97%B4%E9%9B%86%E4%B8%AD%E5%9C%A81%E6%9C%8818%E6%97%A5%E8%87%B325%E6%97%A5%23&Refer=top) 123001
+43. [新疆赛里木湖现万华镜旋之空](https://s.weibo.com//weibo?q=%23%E6%96%B0%E7%96%86%E8%B5%9B%E9%87%8C%E6%9C%A8%E6%B9%96%E7%8E%B0%E4%B8%87%E5%8D%8E%E9%95%9C%E6%97%8B%E4%B9%8B%E7%A9%BA%23&Refer=top) 108690
